adding readme and typos

--- a/README
+++ b/README
@@ -19,7 +19,7 @@ En mi caso partimos del siguiente escenario, un a;o trabajando con JAVA o JS/TS 
 
 El tuyo puede ser un background similar o incluso no saber nada de programacion, pero intentare explicar todo esto para que poco a poco podamos ser unos maestros python.
 
-Asi que al lio 👇🏽
+[Asi que al lio 👇🏽](https://wiki.python.org/moin/SpanishLanguage)
 
 ## configurando el entorno
 
@@ -28,7 +28,12 @@ vamos a configurar el editor visual studio code
 vamos a instalar las siguientes extensiones
 - [python](https://marketplace.visualstudio.com/items?itemName=ms-python.python)
 ### installando python
-### 
+- [instala mira como]()
+### recursos
+
+- [tutorial oficial](https://docs.python.org/es/3/tutorial/)
+- [30 dias de python](https://github.com/Asabeneh/30-Days-Of-Python)
+- [jugando](https://www.codedex.io/python)
 
 
 ## Gracias a
