--- a/beginers/README
+++ b/beginers/README
@@ -13,5 +13,6 @@ Solo comentar como esta pensada la seccion de beginer
 ## enlaces de interes
 
 - [funciones de python](https://docs.python.org/3.9/library/functions.html)
+- [jugando con string](https://docs.python.org/es/3.10/tutorial/introduction.html#strings)
 
 Pues con lo de arriba en mente ya sabes disfruta, aprende, rompe, crea y sobre todo tomate tu tiempo 💜
